fix: remove scrollbar

--- a/app/globals.css
+++ b/app/globals.css
@@ -19,6 +19,14 @@
   }
 }
 
+::-webkit-scrollbar {
+  display: none;
+}
+
+html {
+  scrollbar-width: none;
+}
+
 body {
   background: var(--background);
   color: var(--foreground);
